# thread-per-core

./: .gitignore  Cargo.toml  CargoCult.toml  README.md
src/: lib.rs  main.rs
