[package]
name = "thread-per-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.81"
clap = { version = "^4.5.4", features = ["derive"] }
core_affinity = "0.8.3"
env_logger = "^0.11.3"
log = "^0.4.21"
tokio = { version = "^1.44.2", features = ["macros","rt-multi-thread","time","process","signal","fs","io-util"] }
tokio-stream = {  version = "^0.1.15", features = ["fs"] }

[dev-dependencies]
test-log = "^0.2.16"
